<resources>
    <string name="app_name">MyApplicationFormulario2</string>
    <string name="hint">hint</string>
    <string name="usuario">Usuario</string>
    <string name="button">Button</string>
    <string name="clave">Clave</string>
    <string name="clave2">Repetir Clave</string>
    <string name="correo">Correo</string>
    <string name="telefono">Telefono</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="futbol">Futbol</string>
    <string name="baloncesto">Baloncesto</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="guardar">Guardar</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="buscar">Buscar</string>
    <string name="compartir">Compartir</string>
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>

</resources>